--- a/index.html
+++ b/index.html
@@ -67,59 +67,90 @@
      	 <button type="submit" class="btn btn-primary">Register</button>
   </form>
 </div>
-<hr style="margin-bottom:15px;">
-	<div class="container">
-		<table class="table table-dark table-borderless">
-			<thead>
-				<tr>
-					<th colspan="2">
-						<h2>User Registration</h2>
-					</th>
-				</tr>
-			</thead>
-			<tbody>
-				<tr>
-					<td>
-						<label for="FirstName">First Name:</label>
-					</td>
-					<td>
-						<label for="LastName">Last Name:</label>
-					</td>
-				</tr>
-				<tr>
-					<td>
-						<input type="text">
-					</td>
-					<td>
-						<input type="text">
-					</td>
-				</tr>
-				<tr>
-					<td>
-						<label for="Email">Email:</label>
-					</td>
-					<td>
-						<label for="Password">Password:</label>
-					</td>
-				</tr>
-				<tr>
-					<td>
-						<input type="text">
-					</td>
-					<td>
-						<input type="password">
-					</td>
-				</tr>
-				</tbody>
-				<tfoot>
-					<tr>
-						<td colspan="2"><button type="submit" class="btn btn-primary">Register</button></td>
-					</tr>
-				</tfoot>
-		</table>
-	</div>
-	<hr style="margin-top:5px;">
-	<footer>
+
+<div class="container">
+		<center><p class="h1">MOBILE LEGEND CHARACTERS</p></center>
+		<center><p class="h4">(and MY opinion on you if you main them)</p></center>
+			<div class="mt-3">
+				<table class="table table-bordered">
+					<thead>
+						<tr>
+							<th class="bg-primary text-white h3">CHARACTER IMAGE</th>
+							<th class="bg-primary text-white h3">MY OPINION IF YOU MAIN THEM(from my experience)</th>
+						</tr>
+					</thead>
+						<tbody>
+							<tr>
+							<td class="bg-info">
+								<img src="https://cdn.oneesports.gg/cdn-data/2021/08/MLBB_Saber.jpg" width="250" height="250"></td>
+							<td class="bg-light">
+								<center>
+									<p class="h1">SABER</p>
+									<br>
+									<p class="h4">My opinion on you</p>
+									<p>I don't like you if I pick a <a href="#" data-toggle="tooltip" title="A very fragile (easy to destroy) character">squishy</a> character pero pagkain ka kung tank ka</p>
+									<p><button style="background-color:mediumpurple;">ASSASSAIN</button></p>
+								</center>
+							</td>
+							</tr>
+							<tr>
+								<td class="bg-info">
+									<img src="https://images.prismic.io/rivalryglhf/079fd1c5-5004-458c-af8f-ec7e4775ce4a_Fanny+MLBB.png?auto=compress,format" height="250" width="250"></td>
+								<td class="bg-light">
+									<center>
+										<p class="h1">FANNY</p>
+										<br>
+										<p CLASS="h4">My opinion on you</p>
+										<p>My sister's main. You're either really good with fanny bought a fanny skin or really bad with her</p>
+										<p><button style="background-color:mediumpurple;">ASSASSAIN</button></p>
+									</center>
+								</td>
+							</tr>
+							<tr>
+							<td class="bg-info">
+								<img src="https://i.pinimg.com/474x/fb/bf/4b/fbbf4b57c4e62b9addc34e01272efcb0.jpg" height="250" width="250">
+							</td>
+							<td class="bg-light">
+								<center>
+									<p class="h1">Granger</p>
+									<br>
+									<p class="h4">My opinion on you</p>
+									<p>You're either really good or decent. OR USE <a href="#" data-toggle="tooltip" title="Spell for jungling">RETRIBUTION</a> AND NOT JUNGLE T_T</p>
+									<p><button style="background-color:mediumpurple;">ASSASSAIN</button> <button class="bg-warning">MARKSMAN</button></p>
+							</td>
+							</tr> 
+							<tr>
+								<td class="bg-info">
+									<img src="https://cdn.oneesports.gg/cdn-data/2022/12/MLBB_SerenePlume_Ling_Skin-1.jpg" height="250" width="250">
+								</td>
+								<td class="bg-light">
+									<center>
+										<p class="h1">Ling</p>
+										<br>
+										<p class="h4">My opinion on you</p>
+										<p>This guy's always jungling and the first to reach <a href="#" data-toggle="tooltip" title="Max level in Mobile legends">Level 15</a> AND IS SOO ANNOYING TO DEAL WITH</p>
+										<p><button style="background-color:mediumpurple;">ASSASSAIN</button></p>
+									</center>
+								</td>
+							</tr>
+							<tr>
+								<td class="bg-info">
+									<img src="https://cdn.oneesports.gg/cdn-data/2024/01/MLBB_Aulus_hero.jpg" height="250" width="250">
+								</td>
+								<td class="bg-light">
+									<center>
+										<p class="h1">Aulus</p>
+										<br>
+										<p class="h4">My opinion on you</p>
+										<p>BEST HERO AND JUNGLER FR(this my main full bias)</p>
+										<p><button style="background-color:orange;">FIGHTER</button></p>
+									</center>
+								</td>
+							</tr>
+					</tbody>
+				</table>
+			</div>
+		</div>
 		<a href="https://img.freepik.com/free-vector/hand-painted-watercolor-pastel-sky-background_23-2148902771.jpg">Background Image</a>
 	</footer>
 </body>
